--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="row" style="padding-left: 10px;">
       <div class="col-sm-12 col-md-6">
         <h6><span class="ez-toc-section" id="About"></span>About<span class="ez-toc-section-end"></span></h6>
-        <p class="text-justify">  Here the about parts. this is rajan i am student  and my name </p>
+        <p class="text-justify"> Welcome to Elite Care. This site is under Development by Nicky Ranjan. Thankyou so much fr visit us. </p>
       </div>
 
 
