Update : Update HTML and CSS
Update : Update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
             <div class="modal-body">
 
-             Doctor Name - Dr. R.A Singh(PT) <br> Mobile No - xxxxxxxxxx <br> Email -  xyz@gmail.com 
+             Doctor Name - Dr. R.A Singh(PT) <br> Mobile No - 9570376903 <br> Email -  raushansinghnh77@gmail.com 
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -175,7 +175,7 @@
           </div>
           <div class="carousel-item">
             <img src="folder/d-img9.jpg" class="d-block w-100" alt="NA">
-          </div>
+          </div>s
         </div>
       </div>
     </div>
@@ -421,7 +421,7 @@
   
     <div class="card-body">
       <h5 class="card-title">Dr. R.A Singh (PT)</h5>
-      <p class="card-text">Greetings! I am  <b>Dr. Raushan Kumar Singh</b>  , a dedicated and compassionate healthcare professional
+      <p class="card-text">Greetings! I am  <b>Dr. R.A Singh</b>  , a dedicated and compassionate healthcare professional
          committed to making a positive impact on the well-being of my patients. With a background in 
          Physiotherapy, I have accumulated 5 years of experience in the field of medicine.
 
