--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="style.css"/>
     <body>
     <div class="container-fluid p-4 bg-primary text-white text-center" >
-      <h1> <strong> Elite Care Physiotherapy & Rehablation Center</strong></h1>
-       
+      <h1> <strong> JJ HEALTHCARE & WELLNESS CENTER</strong></h1>
+
     </div>
     </head>
     <body>
@@ -464,7 +464,7 @@
     <div class="row" style="padding-left: 10px;">
       <div class="col-sm-12 col-md-6">
         <h6><span class="ez-toc-section" id="About"></span>About<span class="ez-toc-section-end"></span></h6>
-        <p class="text-justify"> Welcome to Elite Care. This site is under Development by Nicky Ranjan. Thankyou so much for visit us. </p>
+        <p class="text-justify"> Welcome to <b>JJ Healthcare & Wellness Center</b> This site is under Development by Nicky Ranjan. Thankyou so much for visit us. </p>
       </div>
 
 
@@ -496,7 +496,7 @@
     <div class="row">
       <div class="col-md-8 col-sm-6 col-xs-12">
         <p class="copyright-text">Copyright © 2024 All Rights Reserved by 
-     <a href="https://www.instagram.com/max__ranjan/">Nicky Ranjan</a>.
+     <a href="https://www.instagram.com/raushansingh245/">JJ Healthcare & Wellness Center.</a>.
         </p><div class='code-block code-block-5' style='margin: 8px 0; clear: both;'>
 
   </div>
