--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
         
       </div> 
       <!-- <div class="container"> -->
-          <nav class="navbar navbar-expand-lg bg-body-tertiary my-0 mx-0">
+          <nav class="navbar navbar-expand-lg bg-body-tertiary my-0 mx-1">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"> <strong>Elite Care</strong></a>
+              <a class="navbar-brand" href="index.html"> <strong>JJ Healthcare</strong></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
